--- a/client/html/main.html
+++ b/client/html/main.html
@@ -22,7 +22,7 @@
 
         <div id="menu-btn" class="fas fa-bars"></div>
 
-        <a href="#" class="logo"> <span>max</span>wheels </a>
+        <a href="#" class="logo"> <span>Matiz</span>wheels </a>
 
         <nav class="navbar">
             <a href="#home">Главная</a>
@@ -261,7 +261,7 @@
                 <h3>Контактная информация</h3>
                 <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
                 <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-                <a href="#"> <i class="fas fa-envelope"></i> info@maxwheels.com </a>
+                <a href="#"> <i class="fas fa-envelope"></i> info@Matizwheels.com </a>
                 <a href="#"> <i class="fas fa-map-marker-alt"></i> Москва, Россия </a>
             </div>
 
